# 360API

./: Cargo.toml  db  modif cargotoml.txt
aws/: rootkey.csv
migrations/2021-09-04-193759_add_tables/: up.sql
scripts/: test.ps1
scripts/classe/: del.ps1  get.ps1  get_classe.ps1  get_id.ps1  post.ps1
scripts/eleve/: del.ps1  get.ps1  get_id.ps1  post.ps1
scripts/elv_groupe/: get.ps1  get_eleves_groupe.ps1  get_id.ps1  get_id_noteur.ps1  get_id_projet.ps1  post.ps1
scripts/groupe/: del.ps1  get.ps1  get_by_projet.ps1  get_id.ps1  post.ps1
scripts/mail/: envoi.ps1
scripts/note/: del.ps1  get.ps1  get_id.ps1  post.ps1
scripts/projet/: del.ps1  get_id.ps1  post.ps1
scripts/token/: decode.ps1  encode.ps1
src/: auth.rs  eleves.rs  main.rs  models.rs  old.txt  schema.rs  token.txt
