[package]
name = "eleve"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "2.0"
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.1.1"

diesel = { version = "1.4.5", features = ["sqlite", "r2d2"]}
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.15"
derive_more = "0.99.2"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }

tokio = { version = "1.15", features = ["full"] }
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["builder"] }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.47", default-features = false, features = ["rustls"] }
base64 = "0.13"
rusoto_credential = "0.47.0"

jsonwebtoken = "7"
bcrypt = "0.8"

regex = "1"

openssl = "0.10.40"

validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"